--- a/paper/repaper/paper_tesis.tex
+++ b/paper/repaper/paper_tesis.tex
@@ -322,10 +322,11 @@ $r_2$ Min & $0,0$ & $r_2$ max & $1,0$ \\ [1ex]
 \end{table}
  
  
- Se realizaron 30 ejecuciones por cada imagen de prueba. Se obtuvieron aproximadamente 300 imágenes soluciones pareto por cada una de ellas. En las figras \textbf {Fig. 2} al \textbf {Fig. 5}  se muestran 2 de las soluciones que se encuentran en el conjunto pareto para las métricas Entropía/SSIM y Entropía local/SSIM, en las figuras \textbf {Fig. 6}  al \textbf {Fig. 9} se muestran 2 de las soluciones que se encuentran en el conjunto pareto para las métricas Entropía/LTG y Entropía local/LTG, además de las imágenes originales como referencias. En la tabla se muestran las correlaciones entre los pares de métricas utilizados, se puede notar una relación inversa entre ellas; lo cual indica que estos pares de métricas se complementan para mantener el compromiso entre aumento de contraste y minimización de la distorsión. 
+Se realizaron 30 ejecuciones por cada imagen de prueba. Se obtuvieron aproximadamente 300 imágenes soluciones pareto por cada una de ellas. En las figuras \textbf {Fig. 2} al \textbf {Fig. 5}  se muestran 2 de las soluciones que se encuentran en el conjunto pareto para las métricas Entropía/SSIM y Entropía local/SSIM, en las figuras \textbf {Fig. 6}  al \textbf {Fig. 9} se muestran 2 de las soluciones que se encuentran en el conjunto pareto para las métricas Entropía/LTG y Entropía local/LTG, además de las imágenes originales como referencias. En la tabla se muestran las correlaciones entre los pares de métricas utilizados, se puede notar una relación inversa entre ellas; lo cual indica que estos pares de métricas se complementan para mantener el compromiso entre aumento de contraste y minimización de la distorsión. 
 
 \section{conclusiones}
 \label{sec:conclusion}
+Se presentaron 4 pares de métricas, Entropía/SSIM, Entropía local/SSIM, Entropía/LTG y Entropía local/LTG, utilizados junto a un algoritmo metaheurístico y el algoritmo CLAHE, con el objetivo de obtener las métricas que maximicen de manera simultánea el contraste y minimicen la distorsión de la imagen. Los resultados experimentales obtenidos demuestran que los pares de métricas Entropía local/SSIM demuestran ser los más contradictorios según la correlación obtenida.
 
 
 %figuaras entropia/ssim
