correcion de nombres de autores

--- a/paper/repaper/paper_tesis.tex
+++ b/paper/repaper/paper_tesis.tex
@@ -1,4 +1,7 @@
 \documentclass[spanish,twocolumn]{article}
+\usepackage{authblk}
+\usepackage{blindtext}
+\usepackage[utf8]{inputenc}
 \usepackage{spconf,amsmath,graphicx}
 \usepackage{mathptmx}
 \usepackage{mathtools}
@@ -6,7 +9,6 @@
 \usepackage{mathrsfs}
 \usepackage{amssymb}
 \usepackage{amsfonts}
-\usepackage[utf8]{inputenc}
 \usepackage{babel}
 \usepackage{color}
 \usepackage[Algoritmo]{algorithm}
@@ -31,7 +33,8 @@
 
 \title{OBTENCIÓN DE MÉTRICAS CONTRADICTORIAS PARA EL ANÁLISIS DE LA CALIDAD DE IMAGEN BASADO EN LA CORRELACIÓN DE PEARSON USANDO PSO-CLAHE}
 
-\name{Monserrat Mora, Adriana Coronel, Diego Pinto-Roa, José Luis Vázquez Noguera}
+\author{Monserrat Mora \\ Adriana Coronel}
+\name{Monserrat Mora B., Adriana D. Coronel S., Luis G. Moré R., Diego Pinto-Roa, José L. Vázquez N.}
 \address{Facultad Politécnica - Universidad Nacional de Asunción}
 
 \begin{document}
